# EdgeDroidClient

./: .gitignore  .project  README.md  build.gradle
app/: .project  CMakeLists.txt  build.gradle
app/src/androidTest/java/se/kth/molguin/edgedroid/: ExampleInstrumentedTest.java
app/src/androidTest/java/se/kth/molguin/tracedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/se/kth/molguin/edgedroid/: AppViewModel.java  Constants.java  Dialogs.java  IntegratedAsyncLog.java  MainActivity.java  ShutdownMessage.java  SingleLiveEvent.java  TimestampLogTextView.java
app/src/main/java/se/kth/molguin/edgedroid/network/: DataIOStreams.java
app/src/main/java/se/kth/molguin/edgedroid/utils/: AtomicDouble.java
app/src/main/java/se/kth/molguin/tracedemo/: AppStateMsg.java  AppViewModel.java  ApplicationStateUpdHandler.java  Const.java  Constants.java  CrashHandler.java  Dialogs.java  FinishedDialog.java  IntegratedAsyncLog.java  MainActivity.java  ModelState.java  MonitoringThread.java  NTPClient.java  ShutdownMessage.java  SingleLiveEvent.java  SocketInputHandler.java  SocketInputThread.java  SocketOutputHandler.java  SocketOutputThread.java  StatBackendConstants.java  StatCollector.java  StateManager.java  Tasks.java  TimestampLogTextView.java  UILink.java  Utils.java  VideoOutputHandler.java  VideoOutputThread.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/se/kth/molguin/edgedroid/: ExampleUnitTest.java
app/src/test/java/se/kth/molguin/tracedemo/: ExampleUnitTest.java
(+63 files in other folders)
